--- a/about.html
+++ b/about.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Rebecca's portfolio</title>
+    <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
   </head>
   <body>
     <h1>Welcome to my Page</h1>
