--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Rebecca's portfolio</title>
     <style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+body {background-color: lightgreen;}
+h1   {color: black;}
+p    {color: white;}
 </style>
   </head>
   <body>
