--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@
     <title>Rebecca's portfolio</title>
     <style>
 body {background-color: lightgreen;}
-h1   {color: black;}
-p    {color: white;}
+      h1   {color: black;}
+      h2   {color : black;}
+      p    {color: white;}
+      
 </style>
   </head>
   <body>
@@ -15,5 +17,8 @@ p    {color: white;}
     <p>Today, we worked on some circuits, which I found rather difficult. Our job was to attempt to wire the circuit in a way that would allow one of our LED's to light up. As a team, we immediatley turned to Google, which I later learned will become my best friend. We tried a few different websites and videos, but we had no luck. Eventually, a girl from another team came over to help us. Eventually, we discovered we needed to fix our batteries and I realized we should've double checked our batteries in the beginning. In the end, we got our LED to light up and we learned a few lessons along the way.</p>
     <p> My idea of robotics hasn't really changed because I've had some exposure to robotics at a younger age. I still find it a bit challenging while interesting and engaging. The future of robotics makes me very excited because I'm incredly interested in robotics for someone who knows little to nothing about it. Throughout the week, we will be working in groups yet again. One thing I can do better is try to ask questions and engage myself in conversations instead of shutting myself out like I normally do when I don't understand something. </p>    
     <button type="button" onclick="document.getElementById('header').style='background-color:lightpink'">Click Me!</button>
+    <p>June 25, 2017</p>
+    <p>One thing I leanred about how the internet works is information is distributed in parts, or packets, that move in different directions but, in the end, make it to the desired location at the same time. </p>
+    <p>I believe LaTeX is a markup because it is used for simply formatting, which is what a markup is. </p>
   </body>
 </html>
