--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@ body {background-color: lightgreen;}
     <p>One thing I leanred about how the internet works is information is distributed in parts, or packets, that move in different directions but, in the end, make it to the desired location at the same time. </p>
     <p>I believe LaTeX is a markup because it is used for simply formatting, which is what a markup is. </p>
     <p>I would like to add pictures and aesthetics to my Django site. I have a lot of information that I'd like to contribute to my site, but an unattractive site isn't something most people like to visit. </p>
-    <p>I dont really understand much about Django yet since I don't have a ton of experience yet. I'm very excited for tomorrow because I'll have more time to learn as much as i can. </p>
+    <p>June 26,2017</p>
+    <p>A dynamic feature I would like to learn about next is stuff relating to pictures. For example, I'd like to make a changing collage on my page. That'd be quite lovely. </p>
   </body>
 </html>
