--- a/about.html
+++ b/about.html
@@ -23,5 +23,6 @@ body {background-color: lightgreen;}
     <p>I would like to add pictures and aesthetics to my Django site. I have a lot of information that I'd like to contribute to my site, but an unattractive site isn't something most people like to visit. </p>
     <p>June 26,2017</p>
     <p>A dynamic feature I would like to learn about next is stuff relating to pictures. For example, I'd like to make a changing collage on my page. That'd be quite lovely. </p>
+    <p>I would use a dictionary in favor for a list because they allow for more organization and they allow me to put in keys with ease, outputing more information. </p>
   </body>
 </html>
