--- a/about.html
+++ b/about.html
@@ -26,5 +26,7 @@ body {background-color: lightgreen;}
     <p>I would use a dictionary in favor for a list because they allow for more organization and they allow me to put in keys with ease, outputing more information. </p>
     <p>July 31, 2017</p>
     <p>I'm really proud of figuring out some of the components of algorithms, as well as how they work. The Dijkstra algorithm was my favorite from today because I absolutley love the complexity of it. </p>
+    <p>August 3, 2017</p>
+    <p>I'm still having trouble wrapping my head around the idea of a social network and how it works. I'd say that was my only real limitation while building my social network. As for the second question, since I don't have a concrete understanding of a social network, I'm not entirely sure what I would add. </p>
   </body>
 </html>
