--- a/about.html
+++ b/about.html
@@ -28,5 +28,6 @@ body {background-color: lightgreen;}
     <p>I'm really proud of figuring out some of the components of algorithms, as well as how they work. The Dijkstra algorithm was my favorite from today because I absolutley love the complexity of it. </p>
     <p>August 3, 2017</p>
     <p>I'm still having trouble wrapping my head around the idea of a social network and how it works. I'd say that was my only real limitation while building my social network. As for the second question, since I don't have a concrete understanding of a social network, I'm not entirely sure what I would add. </p>
+    <p>I'm really proud that I was able to solve 100% of my syntax errors. I feel like I'm really improving with both coding and thinking outside the box. Normally I'm very skeptical of myself and I look down on myself, but today helped boost some of my confidence. For final projects, I'm really excited to make something that will help people and further benefit society. </p>
   </body>
 </html>
